codigo formatado e adcionado exception personalizadas, novas class para tratar diversos tipos de erros e codigo refaturado para service and controller assim tendo uma responsabilidade para cada um.